--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -470,6 +470,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/6465674?v=4",
       "profile": "https://github.com/Ndawson15",
       "contributions": ["data"]
+    },
+    {
+      "login": "jctopping",
+      "name": "jctopping",
+      "avatar_url": "https://avatars.githubusercontent.com/u/163754356?v=4",
+      "profile": "https://github.com/jctopping",
+      "contributions": ["data"]
     }
   ],
   "contributorsPerLine": 7
