--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -484,6 +484,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/3830362?v=4",
       "profile": "https://fabiovitalba.github.io/",
       "contributions": ["data"]
+    },
+    {
+      "login": "dustinb",
+      "name": "Dustin Butler",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1167912?v=4",
+      "profile": "https://github.com/dustinb",
+      "contributions": ["data"]
     }
   ],
   "contributorsPerLine": 7
