--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -491,6 +491,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/1167912?v=4",
       "profile": "https://github.com/dustinb",
       "contributions": ["data"]
+    },
+    {
+      "login": "BruddahChrispy",
+      "name": "BruddahChrispy",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3619514?v=4",
+      "profile": "https://github.com/BruddahChrispy",
+      "contributions": ["data"]
     }
   ],
   "contributorsPerLine": 7
